# adventofcode

./: .gitignore  .gitmodules
2018/: 1-1.py  1-2.py  10-1.py  10-2.py  11-1.py  11-2.py  12-1.py  12-2.cpp  12-test2.txt  13-1.py  13-2.py  14-1.py  14-2.py  15-1.py  2-1.py  2-2.py  3-1.py  3-2.py  4-1.py  4-2.py  5-1.py  5-2.py  6-1.py  6-2.py  7-1.py  7-2.py  8-1.py  8-2.py  9-1.py  9-2.py  CMakeLists.txt
2019/: 1-1.py  1-2.py  10-1.py  10-2.py  11-1.py  11-2.py  12-1.py  12-2.py  13-1.py  13-2.py  14-1.py  14-2.py  15-1.py  15-2.py  15-map.txt  16-1.py  16-2.cpp  17-1.py  17-2.py  17-map.txt  18-1.py  18-2.py  19-1.py  19-2.py  2-1.py  2-2.py  20-1.py  20-2.py  21-1.py  21-2.py  22-1.py  22-2.py  3-1.py  3-2.py  4-1.py  4-2.py  5-1.py  5-2.py  6-1.py  6-2.py  (+10 more)
2020/: 1-1.py  1-2.py  10-1.py  10-2.py  11-1.py  11-2.py  12-1.py  12-2.py  13-1.py  13-2.py  13-test-reddit2.txt  14-1.py  14-2.py  15-1.py  15-2.py  16-1.py  16-2.py  17-1.py  17-2.py  18-1.py  18-2.py  2-1.py  2-2.py  3-1.py  3-2.py  4-1.py  4-2.py  5-1.py  5-2.py  6-1.py  6-2.py  7-1.py  7-2.py  8-1.py  8-2.py  9-1.py  9-2.py  util.py
2021/: 1-1.cpp  1-2.cpp  10-1.cpp  10-2.cpp  11-1.cpp  11-2.cpp  12-1.cpp  12-2.cpp  13-1.cpp  13-2.cpp  2-1.cpp  2-2.cpp  3-1.cpp  3-2.cpp  4-1.cpp  4-2.cpp  5-1.cpp  5-2.cpp  6-1.cpp  6-2.cpp  7-1.cpp  7-2.cpp  8-1.cpp  8-2.cpp  9-1.cpp  9-2.cpp  CMakeLists.txt  util.h
2021/util/: containers.h  ostream.h  parsing.h  run.h  util.h
2022/: build.gradle.kts
2022/inputs/: .gitignore  README.md
2022/src/: 1-1.kt  1-2.kt  10-1.kt  10-2.kt  11-1.kt  11-2.kt  12-1.kt  12-2.kt  2-1.kt  2-2.kt  3-1.kt  3-2.kt  4-1.kt  4-2.kt  5-1.kt  5-2.kt  6-1.kt  6-2.kt  7-1.kt  7-2.kt  8-1.kt  8-2.kt  9-1.kt  9-2.kt
2022/src/util/: Bitmask.kt  ListUtil.kt  Multik.kt  Pair.kt  XY.kt
2023/: 1-1.py  1-2.py  2-1.py  2-2.py  3-1.py  3-2.py  4-1.py  4-2.py
